LPS-153813 gw buildREST
https://issues.liferay.com/browse/LPS-153813
